# SoupGB

./: .gitignore  Cargo.toml  README.md  blargg_test.sh
src/: alu.rs  clock.rs  constants.rs  cpu.rs  debugger.rs  dispatcher.rs  emulator.rs  gpu.rs  interrupts.rs  joypad.rs  lib.rs  main.rs  memory.rs  ppu.rs  registers.rs  timers.rs  utils.rs
src/apu/: apu_timer.rs  channel.rs  frame_seq.rs  mod.rs  sweep.rs
src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mod.rs  rom_only.rs
src/test/: mod.rs
tests/: integration.rs
